--- a/Project_Tabel.dproj
+++ b/Project_Tabel.dproj
@@ -59,6 +59,7 @@
         <UWP_DelphiLogo44>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
         <SanitizedProjectName>Project_Tabel</SanitizedProjectName>
+        <Custom_Styles>&quot;Emerald Light Slate|VCLSTYLE|$(BDSCOMMONDIR)\Styles\EmeraldLightSlate.vsf&quot;;Obsidian|VCLSTYLE|$(BDSCOMMONDIR)\Styles\Obsidian.vsf</Custom_Styles>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UsePackage>DBXSqliteDriver;DataSnapServerMidas;DBXDb2Driver;DBXInterBaseDriver;ngcgoogle18svc;vclactnband;vclFireDAC;svnui;tethering;JvGlobus;FireDACADSDriver;JvPluginSystem;DBXMSSQLDriver;JvMM;ngcgoogle14svc;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;JvBands;ngcgoogle12svc;vcldb;bindcompfmx;svn;JvJans;DBXOracleDriver;JvNet;ngcgoogle11svc;inetdb;JvAppFrm;ngcgoogle8svc;ngcgoogle3svc;FmxTeeUI;emsedge;JvDotNetCtrls;fmx;fmxdae;JvWizards;ngcgoogle5svc;FireDACDBXDriver;dbexpress;IndyCore;ngvalidators;vclx;JvPageComps;dsnap;DataSnapCommon;JvDB;ngdialogs;DataSnapConnectors;ngcgoogle10svc;VCLRESTComponents;ngcgoogle2svc;ngcgoogle13svc;JclDeveloperTools;ngcgoogle7svc;vclie;bindengine;DBXMySQLDriver;FireDACOracleDriver;FireDACMySQLDriver;DBXFirebirdDriver;JvCmp;JvHMI;FireDACCommonODBC;DataSnapClient;bindcompdbx;IndyIPCommon;JvCustom;vcl;DBXSybaseASEDriver;IndyIPServer;JvXPCtrls;ngcgoogle1svc;IndySystem;ngcruntime;FireDACDb2Driver;dsnapcon;ngcgoogle6svc;FireDACMSAccDriver;fmxFireDAC;FireDACInfxDriver;vclimg;TeeDB;Jcl;JvCore;emshosting;ngcgoogle19svc;ngcdropbox;ngcommon;JvCrypt;FireDACPgDriver;ngcgoogle4svc;FireDACASADriver;ngcgoogle9svc;DBXOdbcDriver;FireDACTDataDriver;FMXTee;ngcgoogle;nghtml;DbxCommonDriver;JvDlgs;JvRuntimeDesign;JvManagedThreads;Tee;ngvldtctrls;DataSnapServer;xmlrtl;DataSnapNativeClient;fmxobj;vclwinx;FireDACDSDriver;rtl;JvTimeFramework;DbxClientDriver;ngcgoogle17svc;DBXSybaseASADriver;ngcgoogle15svc;CustomIPTransport;vcldsnap;ngcboxnet;JvSystem;JvStdCtrls;ngdragdrop;bindcomp;appanalytics;DBXInformixDriver;BComPortD7;IndyIPClient;bindcompvcl;TeeUI;JvDocking;dbxcds;VclSmp;JvPascalInterpreter;adortl;FireDACODBCDriver;JclVcl;DataSnapIndy10ServerTransport;dsnapxml;DataSnapProviderClient;dbrtl;inetdbxpress;FireDACMongoDBDriver;IndyProtocols;JvControls;JvPrintPreview;ngcgoogle16svc;JclContainers;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
@@ -84,6 +85,8 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppEnableHighDPI>true</AppEnableHighDPI>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -107,6 +110,10 @@
             <Form>FormAbout</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Personal.pas">
+            <Form>FormPersonal</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -127,6 +134,10 @@
                 <Source>
                     <Source Name="MainSource">Project_Tabel.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k250.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp250.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="Win32\Debug\Project_Tabel.exe" Configuration="Debug" Class="ProjectOutput">
